--- a/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -101,6 +101,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [MRU]
 MRUItem0=/Game/StreetSceneLarge
+MRUItem1=/Game/StreetSceneLarge_SS
 
 [LightingBuildOptions]
 QualityLevel=3
@@ -122,7 +123,7 @@ LodDistance7=0.000000
 LastLevel=/Game/StreetSceneLarge
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -386,25 +387,25 @@ AssetPropertyPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
 MRUItem0=/Game/StreetSceneLarge
-MRUItem1=/Game/woodBlocksContent/M_StreetBlockStipes_AP_Inst2
-MRUItem2=/Game/woodBlocksContent/streetLines001
-MRUItem3=/Game/woodBlocksContent/M_StreetBlockStipes_AP_Inst1
-MRUItem4=/Game/woodBlocksContent/decalTest
-MRUItem5=/Game/woodBlocksContent/D_Crosswalk_AP
-MRUItem6=/Game/woodBlocksContent/M_DarkWood_AP_Inst
-MRUItem7=/Game/woodBlocksContent/CrossWalk_Mat
-MRUItem8=/Game/woodBlocksContent/MD_CrossWalk_AP
-MRUItem9=/Game/woodBlocksContent/M_WoodBlock004_AP_Inst
-MRUItem10=/Game/woodBlocksContent/M_SidewalkBlock_AP_Inst
-MRUItem11=/Game/woodBlocksContent/M_StreetBlock_AP_Inst
-MRUItem12=/Game/woodBlocksContent/M_MedWood2_AP_Inst
-MRUItem13=/Game/woodBlocksContent/M_MedWood1_AP_Inst
-MRUItem14=/Game/woodBlocksContent/M_LightWood_AP_Inst
-MRUItem15=/Game/woodBlocksContent/M_MasterWoodBlock_AP
-MRUItem16=/Game/Tractor/tractorBase
-MRUItem17=/Game/Tractor/tractor4groupsUVs_pCylinder26
-MRUItem18=/Game/woodBlocksContent/M_WoodBlock002_AP_Inst
-MRUItem19=/Game/woodBlocksContent/M_WoodBlock003_AP_Inst
+MRUItem1=/Game/StreetSceneLarge_SS
+MRUItem2=/Game/woodBlocksContent/M_StreetBlockStipes_AP_Inst2
+MRUItem3=/Game/woodBlocksContent/streetLines001
+MRUItem4=/Game/woodBlocksContent/M_StreetBlockStipes_AP_Inst1
+MRUItem5=/Game/woodBlocksContent/decalTest
+MRUItem6=/Game/woodBlocksContent/D_Crosswalk_AP
+MRUItem7=/Game/woodBlocksContent/M_DarkWood_AP_Inst
+MRUItem8=/Game/woodBlocksContent/CrossWalk_Mat
+MRUItem9=/Game/woodBlocksContent/MD_CrossWalk_AP
+MRUItem10=/Game/woodBlocksContent/M_WoodBlock004_AP_Inst
+MRUItem11=/Game/woodBlocksContent/M_SidewalkBlock_AP_Inst
+MRUItem12=/Game/woodBlocksContent/M_StreetBlock_AP_Inst
+MRUItem13=/Game/woodBlocksContent/M_MedWood2_AP_Inst
+MRUItem14=/Game/woodBlocksContent/M_MedWood1_AP_Inst
+MRUItem15=/Game/woodBlocksContent/M_LightWood_AP_Inst
+MRUItem16=/Game/woodBlocksContent/M_MasterWoodBlock_AP
+MRUItem17=/Game/Tractor/tractorBase
+MRUItem18=/Game/Tractor/tractor4groupsUVs_pCylinder26
+MRUItem19=/Game/woodBlocksContent/M_WoodBlock002_AP_Inst
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -1136,7 +1137,7 @@ PrimType=1
 
 [DetailPropertyExpansion]
 MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[3].Parameters.Parameters[1].Object.ParameterValue\" "
-Object="\"Object.ParameterGroups.ParameterGroups[3].Parameters.Parameters[1].Object.ParameterValue\" "
+Object=
 
 [SuppressableDialogs]
 Warning_CompileErrorsInMaterial=False
