--- a/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -102,14 +102,15 @@ CameraSpeed=3
 CameraSpeedScalar=19.224205
 
 [MRU]
-MRUItem0=/Game/StreetSceneLarge_YCF
-MRUItem1=/Game/StreetSceneLarge
-MRUItem2=/Game/StreetSceneLarge1_SS
-MRUItem3=/Game/StreetSceneLarge_SCB
-MRUItem4=/Game/StreetSceneLarge_LP
-MRUItem5=/Game/StreetSceneLarge_CIR
-MRUItem6=/Game/StreetSceneLarge_AR
-MRUItem7=/Game/StreetSceneLarge_SS
+MRUItem0=/Game/StreetSceneLarge_ST
+MRUItem1=/Game/StreetSceneLarge_YCF
+MRUItem2=/Game/StreetSceneLarge
+MRUItem3=/Game/StreetSceneLarge1_SS
+MRUItem4=/Game/StreetSceneLarge_SCB
+MRUItem5=/Game/StreetSceneLarge_LP
+MRUItem6=/Game/StreetSceneLarge_CIR
+MRUItem7=/Game/StreetSceneLarge_AR
+MRUItem8=/Game/StreetSceneLarge_SS
 
 [LightingBuildOptions]
 QualityLevel=3
@@ -128,10 +129,10 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 
 [EditorStartup]
-LastLevel=/Game/StreetSceneLarge_YCF
+LastLevel=/Game/StreetSceneLarge_ST
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -480,6 +481,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/woodBlocksContent/M_SidewalkBlock_AP_Inst.M_SidewalkBlock_AP_Inst;
 RecentlyPlaced=/Game/woodBlocksContent/M_StreetBlockStipes_AP_Inst2.M_StreetBlockStipes_AP_Inst2;
 RecentlyPlaced=/Game/Tractor/SM_MERGED_tractorBase.SM_MERGED_tractorBase;
 RecentlyPlaced=/Game/woodBlocksContent/CrossWalk.CrossWalk;
@@ -499,7 +501,6 @@ RecentlyPlaced=/Game/StreetBlocks/streetBlocks100X50X30.streetBlocks100X50X30;
 RecentlyPlaced=/Game/StreetBlocks/streetBlocks50RCorner.streetBlocks50RCorner;
 RecentlyPlaced=/Game/StreetBlocks/streetBlocks100X100X20.streetBlocks100X100X20;
 RecentlyPlaced=/Game/StreetBlocks/streetBlocks100X50X20.streetBlocks100X50X20;
-RecentlyPlaced=/Game/StreetBlocks/streetBlocks50X50X20.streetBlocks50X50X20;
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -529,26 +530,26 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StreetSceneLarge_YCF
-MRUItem1=/Game/StreetSceneLarge
-MRUItem2=/Game/StreetSceneLarge1_SS
-MRUItem3=/Game/StreetSceneLarge_SCB
-MRUItem4=/Game/StreetSceneLarge_LP
-MRUItem5=/Game/StreetSceneLarge_CIR_BuiltData
-MRUItem6=/Game/StreetSceneLarge_CIR
-MRUItem7=/Game/StreetSceneLarge_AR
-MRUItem8=/Game/StreetSceneLarge_SS
-MRUItem9=/Game/woodBlocksContent/M_StreetBlockStipes_AP_Inst2
-MRUItem10=/Game/woodBlocksContent/streetLines001
-MRUItem11=/Game/woodBlocksContent/M_StreetBlockStipes_AP_Inst1
-MRUItem12=/Game/woodBlocksContent/decalTest
-MRUItem13=/Game/woodBlocksContent/D_Crosswalk_AP
-MRUItem14=/Game/woodBlocksContent/M_DarkWood_AP_Inst
-MRUItem15=/Game/woodBlocksContent/CrossWalk_Mat
-MRUItem16=/Game/woodBlocksContent/MD_CrossWalk_AP
-MRUItem17=/Game/woodBlocksContent/M_WoodBlock004_AP_Inst
-MRUItem18=/Game/woodBlocksContent/M_SidewalkBlock_AP_Inst
-MRUItem19=/Game/woodBlocksContent/M_StreetBlock_AP_Inst
+MRUItem0=/Game/StreetSceneLarge_ST
+MRUItem1=/Game/StreetSceneLarge_YCF
+MRUItem2=/Game/StreetSceneLarge
+MRUItem3=/Game/StreetSceneLarge1_SS
+MRUItem4=/Game/StreetSceneLarge_SCB
+MRUItem5=/Game/StreetSceneLarge_LP
+MRUItem6=/Game/StreetSceneLarge_CIR_BuiltData
+MRUItem7=/Game/StreetSceneLarge_CIR
+MRUItem8=/Game/StreetSceneLarge_AR
+MRUItem9=/Game/StreetSceneLarge_SS
+MRUItem10=/Game/woodBlocksContent/M_StreetBlockStipes_AP_Inst2
+MRUItem11=/Game/woodBlocksContent/streetLines001
+MRUItem12=/Game/woodBlocksContent/M_StreetBlockStipes_AP_Inst1
+MRUItem13=/Game/woodBlocksContent/decalTest
+MRUItem14=/Game/woodBlocksContent/D_Crosswalk_AP
+MRUItem15=/Game/woodBlocksContent/M_DarkWood_AP_Inst
+MRUItem16=/Game/woodBlocksContent/CrossWalk_Mat
+MRUItem17=/Game/woodBlocksContent/MD_CrossWalk_AP
+MRUItem18=/Game/woodBlocksContent/M_WoodBlock004_AP_Inst
+MRUItem19=/Game/woodBlocksContent/M_SidewalkBlock_AP_Inst
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -1292,5 +1293,8 @@ None=======
 
 [SuppressableDialogs]
 Warning_CompileErrorsInMaterial=False
+
+[DetailCategoriesAdvanced]
+StaticMeshActor.Materials=True
 
 
