--- a/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -102,15 +102,16 @@ CameraSpeed=3
 CameraSpeedScalar=19.224205
 
 [MRU]
-MRUItem0=/Game/StreetSceneLarge_ST
+MRUItem0=/Game/Maps/Andrew_Baldridge_Street_Level
 MRUItem1=/Game/StreetSceneLarge_YCF
 MRUItem2=/Game/StreetSceneLarge
-MRUItem3=/Game/StreetSceneLarge1_SS
-MRUItem4=/Game/StreetSceneLarge_SCB
-MRUItem5=/Game/StreetSceneLarge_LP
-MRUItem6=/Game/StreetSceneLarge_CIR
-MRUItem7=/Game/StreetSceneLarge_AR
-MRUItem8=/Game/StreetSceneLarge_SS
+MRUItem3=/Game/StreetSceneLarge_ST
+MRUItem4=/Game/StreetSceneLarge1_SS
+MRUItem5=/Game/StreetSceneLarge_SCB
+MRUItem6=/Game/StreetSceneLarge_LP
+MRUItem7=/Game/StreetSceneLarge_CIR
+MRUItem8=/Game/StreetSceneLarge_AR
+MRUItem9=/Game/StreetSceneLarge_SS
 
 [LightingBuildOptions]
 QualityLevel=3
@@ -129,10 +130,10 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 
 [EditorStartup]
-LastLevel=/Game/StreetSceneLarge_ST
+LastLevel=/Engine/Maps/Templates/Template_Default
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -404,6 +405,21 @@ CrashReporterSettings.CrashReporter=True
 LogVisualizerSettings.VisualLogger=True
 None=======
 MapBuildDataRegistry.Lighting=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -412,7 +428,7 @@ VertexOverrideColor=(B=255,G=255,R=255,A=255)
 bGenerateLightmapUVs=True
 bOneConvexHullPerUCX=True
 bAutoGenerateCollision=True
-bCombineMeshes=False
+bCombineMeshes=True
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
 bImportMeshLODs=False
@@ -420,7 +436,7 @@ NormalImportMethod=FBXNIM_ImportNormals
 NormalGenerationMethod=MikkTSpace
 ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
 ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
-ImportUniformScale=1.000000
+ImportUniformScale=10.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
@@ -481,6 +497,8 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Andrew_Baldrige_Content/Tank/Andrew_Balridge_Tank.Andrew_Balridge_Tank;
+RecentlyPlaced=/Game/Andrew_Baldrige_Content/Tank/Tank_Uvd.Tank_Uvd;
 RecentlyPlaced=/Game/PlaneCombined.PlaneCombined;
 RecentlyPlaced=/Game/woodBlocksContent/M_SidewalkBlock_AP_Inst.M_SidewalkBlock_AP_Inst;
 RecentlyPlaced=/Game/woodBlocksContent/M_StreetBlockStipes_AP_Inst2.M_StreetBlockStipes_AP_Inst2;
@@ -499,8 +517,6 @@ RecentlyPlaced=/Game/woodBlocksContent/M_WoodBlock004_AP_Inst.M_WoodBlock004_AP_
 RecentlyPlaced=/Game/woodBlocksContent/M_WoodBlock002_AP_Inst.M_WoodBlock002_AP_Inst;
 RecentlyPlaced=/Game/woodBlocksContent/M_WoodBlock003_AP_Inst.M_WoodBlock003_AP_Inst;
 RecentlyPlaced=/Game/StreetBlocks/streetBlocks100X50X30.streetBlocks100X50X30;
-RecentlyPlaced=/Game/StreetBlocks/streetBlocks50RCorner.streetBlocks50RCorner;
-RecentlyPlaced=/Game/StreetBlocks/streetBlocks100X100X20.streetBlocks100X100X20;
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -530,26 +546,26 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StreetSceneLarge_ST
-MRUItem1=/Game/StreetSceneLarge_YCF
-MRUItem2=/Game/StreetSceneLarge
-MRUItem3=/Game/StreetSceneLarge1_SS
-MRUItem4=/Game/StreetSceneLarge_SCB
-MRUItem5=/Game/StreetSceneLarge_LP
-MRUItem6=/Game/StreetSceneLarge_CIR_BuiltData
-MRUItem7=/Game/StreetSceneLarge_CIR
-MRUItem8=/Game/StreetSceneLarge_AR
-MRUItem9=/Game/StreetSceneLarge_SS
-MRUItem10=/Game/woodBlocksContent/M_StreetBlockStipes_AP_Inst2
-MRUItem11=/Game/woodBlocksContent/streetLines001
-MRUItem12=/Game/woodBlocksContent/M_StreetBlockStipes_AP_Inst1
-MRUItem13=/Game/woodBlocksContent/decalTest
-MRUItem14=/Game/woodBlocksContent/D_Crosswalk_AP
-MRUItem15=/Game/woodBlocksContent/M_DarkWood_AP_Inst
-MRUItem16=/Game/woodBlocksContent/CrossWalk_Mat
-MRUItem17=/Game/woodBlocksContent/MD_CrossWalk_AP
-MRUItem18=/Game/woodBlocksContent/M_WoodBlock004_AP_Inst
-MRUItem19=/Game/woodBlocksContent/M_SidewalkBlock_AP_Inst
+MRUItem0=/Game/Andrew_Baldrige_Content/Tank/Materials/Wood_Master_Mtl_Inst
+MRUItem1=/Game/Andrew_Baldrige_Content/Tank/Materials/Wood_Master_Mtl
+MRUItem2=/Game/woodBlocksContent/M_MasterWoodBlock_AP
+MRUItem3=/Game/woodBlocksContent/M_DarkWood_AP_Inst
+MRUItem4=/Game/StreetSceneLarge_YCF
+MRUItem5=/Game/StreetSceneLarge
+MRUItem6=/Game/StreetSceneLarge_ST
+MRUItem7=/Game/StreetSceneLarge1_SS
+MRUItem8=/Game/StreetSceneLarge_SCB
+MRUItem9=/Game/StreetSceneLarge_LP
+MRUItem10=/Game/StreetSceneLarge_CIR_BuiltData
+MRUItem11=/Game/StreetSceneLarge_CIR
+MRUItem12=/Game/StreetSceneLarge_AR
+MRUItem13=/Game/StreetSceneLarge_SS
+MRUItem14=/Game/woodBlocksContent/M_StreetBlockStipes_AP_Inst2
+MRUItem15=/Game/woodBlocksContent/streetLines001
+MRUItem16=/Game/woodBlocksContent/M_StreetBlockStipes_AP_Inst1
+MRUItem17=/Game/woodBlocksContent/decalTest
+MRUItem18=/Game/woodBlocksContent/D_Crosswalk_AP
+MRUItem19=/Game/woodBlocksContent/CrossWalk_Mat
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -1285,16 +1301,20 @@ bUseUnsortedMenus=False
 PrimType=1
 
 [DetailPropertyExpansion]
-MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[3].Parameters.Parameters[1].Object.ParameterValue\" "
+MaterialEditorInstanceConstant=
 Object=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 None=======
+MaterialEditorPreviewParameters="\"Object.ParameterGroups.ParameterGroups[3].Parameters.Parameters[1].Object.ParameterValue\" "
 
 [SuppressableDialogs]
 Warning_CompileErrorsInMaterial=False
 
 [DetailCategoriesAdvanced]
 StaticMeshActor.Materials=True
+FbxImportUI.LodSettings=True
+FbxImportUI.Miscellaneous=False
+FbxImportUI.Mesh=True
 
 
