--- a/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -100,15 +100,15 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",BufferVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 CameraSpeed=3
 CameraSpeedScalar=19.224205
-CurrentPosGridSize=1
+CurrentPosGridSize=4
 
 [MRU]
 MRUItem0=/Game/StreetSceneLarge
-MRUItem1=/Game/StreetSceneLarge_ST
+MRUItem1=/Game/StreetSceneLarge_YCF
 MRUItem2=/Game/StreetSceneLarge_SD
 MRUItem3=/Game/StreetSceneLarge_CIR
-MRUItem4=/Game/StreetSceneLarge_YCF
-MRUItem5=/Game/Maps/Andrew_Baldridge_Street_Level
+MRUItem4=/Game/Maps/Andrew_Baldridge_Street_Level
+MRUItem5=/Game/StreetSceneLarge_ST
 MRUItem6=/Game/StreetSceneLarge1_SS
 MRUItem7=/Game/StreetSceneLarge_SCB
 MRUItem8=/Game/StreetSceneLarge_LP
@@ -135,7 +135,7 @@ LodDistance7=0.000000
 LastLevel=/Game/StreetSceneLarge
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -572,26 +572,26 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Shakti_Das_Content/M_WoodBlock_Instance_2
-MRUItem1=/Game/Shakti_Das_Content/M_WoodBlock_Instance_1
-MRUItem2=/Game/StreetSceneLarge
-MRUItem3=/Game/StreetSceneLarge_ST
-MRUItem4=/Game/StreetSceneLarge_SD
-MRUItem5=/Game/Shakti_Das_Content/M_Woodblock
-MRUItem6=/Game/Woodblock/M_WoodBlock_Instance_3
-MRUItem7=/Game/Christian_Roy_Content/WoodBlock/M_MasterWoodBlock_AP
-MRUItem8=/Game/Christian_Roy_Content/Car
-MRUItem9=/Game/Shakti_Das_Content/Woodblock/SpecificWoodTextureNormal
-MRUItem10=/Game/Shakti_Das_Content/Woodblock/M_WoodBlock_Instance_1
-MRUItem11=/Game/Shakti_Das_Content/Woodblock/Shak_WoodBlock_3
-MRUItem12=/Game/Shakti_Das_Content/Woodblock/Shak_WoodBlock_2_REDONE
-MRUItem13=/Game/Shakti_Das_Content/Shakti_Das_-_Car_UV_pCube7
-MRUItem14=/Game/Shakti_Das_Content/Shak_WoodBlock_2_REDONE
-MRUItem15=/Game/StreetSceneLarge_CIR
-MRUItem16=/Game/StreetSceneLarge_YCF
-MRUItem17=/Game/Andrew_Baldrige_Content/Tank/Materials/Wood_Master_Mtl_Inst
-MRUItem18=/Game/Andrew_Baldrige_Content/Tank/Materials/Wood_Master_Mtl
-MRUItem19=/Game/woodBlocksContent/M_MasterWoodBlock_AP
+MRUItem0=/Game/StreetSceneLarge
+MRUItem1=/Game/StreetSceneLarge_YCF
+MRUItem2=/Game/StreetSceneLarge_SD
+MRUItem3=/Game/StreetSceneLarge_CIR
+MRUItem4=/Game/Maps/Andrew_Baldridge_Street_Level
+MRUItem5=/Game/Shakti_Das_Content/M_WoodBlock_Instance_2
+MRUItem6=/Game/Shakti_Das_Content/M_WoodBlock_Instance_1
+MRUItem7=/Game/StreetSceneLarge_ST
+MRUItem8=/Game/Shakti_Das_Content/M_Woodblock
+MRUItem9=/Game/Woodblock/M_WoodBlock_Instance_3
+MRUItem10=/Game/Christian_Roy_Content/WoodBlock/M_MasterWoodBlock_AP
+MRUItem11=/Game/Christian_Roy_Content/Car
+MRUItem12=/Game/Shakti_Das_Content/Woodblock/SpecificWoodTextureNormal
+MRUItem13=/Game/Shakti_Das_Content/Woodblock/M_WoodBlock_Instance_1
+MRUItem14=/Game/Shakti_Das_Content/Woodblock/Shak_WoodBlock_3
+MRUItem15=/Game/Shakti_Das_Content/Woodblock/Shak_WoodBlock_2_REDONE
+MRUItem16=/Game/Shakti_Das_Content/Shakti_Das_-_Car_UV_pCube7
+MRUItem17=/Game/Shakti_Das_Content/Shak_WoodBlock_2_REDONE
+MRUItem18=/Game/Andrew_Baldrige_Content/Tank/Materials/Wood_Master_Mtl_Inst
+MRUItem19=/Game/Andrew_Baldrige_Content/Tank/Materials/Wood_Master_Mtl
 
 [MaterialInstanceEditor]
 bShowGrid=False
