--- a/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -101,18 +101,18 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CameraSpeedScalar=19.224205
 
 [MRU]
-MRUItem0=/Game/StreetSceneLarge
-MRUItem1=/Game/StreetSceneLarge_AC
-MRUItem2=/Game/StreetScene_PJH
-MRUItem3=/Game/StreetSceneLarge_JJ
-MRUItem4=/Game/StreetSceneLarge_SD
-MRUItem5=/Game/StreetSceneLarge_ST
-MRUItem6=/Game/StreetSceneLarge_CIR
-MRUItem7=/Game/StreetSceneLarge_JC
-MRUItem8=/Game/StreetSceneLarge_YCF
-MRUItem9=/Game/Maps/Andrew_Baldridge_Street_Level
-MRUItem10=/Game/StreetSceneLarge1_SS
-MRUItem11=/Game/StreetSceneLarge_SCB
+MRUItem0=/Game/StreetSceneLarge_Lin_Pan
+MRUItem1=/Game/StreetSceneLarge_ST
+MRUItem2=/Game/StreetSceneLarge
+MRUItem3=/Game/StreetSceneLarge_AC
+MRUItem4=/Game/StreetScene_PJH
+MRUItem5=/Game/StreetSceneLarge_JJ
+MRUItem6=/Game/StreetSceneLarge_SD
+MRUItem7=/Game/StreetSceneLarge_CIR
+MRUItem8=/Game/StreetSceneLarge_JC
+MRUItem9=/Game/StreetSceneLarge_YCF
+MRUItem10=/Game/Maps/Andrew_Baldridge_Street_Level
+MRUItem11=/Game/StreetSceneLarge1_SS
 
 [LightingBuildOptions]
 QualityLevel=3
@@ -131,10 +131,10 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 
 [EditorStartup]
-LastLevel=/Game/StreetSceneLarge
+LastLevel=/Game/StreetSceneLarge_Lin_Pan
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -596,26 +596,26 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StreetSceneLarge
-MRUItem1=/Game/StreetSceneLarge_AC
-MRUItem2=/Game/StreetScene_PJH
-MRUItem3=/Game/StreetSceneLarge_JJ
-MRUItem4=/Game/StreetSceneLarge_SD
-MRUItem5=/Game/StreetSceneLarge_ST
-MRUItem6=/Game/StreetSceneLarge_CIR
-MRUItem7=/Game/StreetSceneLarge_JC
-MRUItem8=/Game/StreetSceneLarge_YCF
-MRUItem9=/Game/Jason_Jackson_Content/Parts/M_MasterWoodBlock_AP_1_Inst
-MRUItem10=/Game/Jason_Jackson_Content/Parts/M_MasterWoodBlock_AP_1
-MRUItem11=/Game/Jason_Jackson_Content/Parts/M_MasterWoodBlock_AP_2
-MRUItem12=/Game/Jason_Jackson_Content/Parts/M_WoodBlock_AP_Inst
-MRUItem13=/Game/Jason_Jackson_Content/Parts/M_MasterWoodBlock_AP
-MRUItem14=/Game/Maps/Andrew_Baldridge_Street_Level
-MRUItem15=/Game/Shakti_Das_Content/M_WoodBlock_Instance_2
-MRUItem16=/Game/Shakti_Das_Content/M_WoodBlock_Instance_1
-MRUItem17=/Game/Shakti_Das_Content/M_Woodblock
-MRUItem18=/Game/Woodblock/M_WoodBlock_Instance_3
-MRUItem19=/Game/Christian_Roy_Content/WoodBlock/M_MasterWoodBlock_AP
+MRUItem0=/Game/StreetSceneLarge_Lin_Pan
+MRUItem1=/Game/StreetSceneLarge_ST
+MRUItem2=/Game/StreetSceneLarge
+MRUItem3=/Game/StreetSceneLarge_AC
+MRUItem4=/Game/StreetScene_PJH
+MRUItem5=/Game/StreetSceneLarge_JJ
+MRUItem6=/Game/StreetSceneLarge_SD
+MRUItem7=/Game/StreetSceneLarge_CIR
+MRUItem8=/Game/StreetSceneLarge_JC
+MRUItem9=/Game/StreetSceneLarge_YCF
+MRUItem10=/Game/Jason_Jackson_Content/Parts/M_MasterWoodBlock_AP_1_Inst
+MRUItem11=/Game/Jason_Jackson_Content/Parts/M_MasterWoodBlock_AP_1
+MRUItem12=/Game/Jason_Jackson_Content/Parts/M_MasterWoodBlock_AP_2
+MRUItem13=/Game/Jason_Jackson_Content/Parts/M_WoodBlock_AP_Inst
+MRUItem14=/Game/Jason_Jackson_Content/Parts/M_MasterWoodBlock_AP
+MRUItem15=/Game/Maps/Andrew_Baldridge_Street_Level
+MRUItem16=/Game/Shakti_Das_Content/M_WoodBlock_Instance_2
+MRUItem17=/Game/Shakti_Das_Content/M_WoodBlock_Instance_1
+MRUItem18=/Game/Shakti_Das_Content/M_Woodblock
+MRUItem19=/Game/Woodblock/M_WoodBlock_Instance_3
 
 [MaterialInstanceEditor]
 bShowGrid=False
