--- a/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -102,11 +102,11 @@ CameraSpeedScalar=19.224205
 
 [MRU]
 MRUItem0=/Game/StreetSceneLarge_Lin_Pan
-MRUItem1=/Game/StreetSceneLarge_ST
-MRUItem2=/Game/StreetSceneLarge
-MRUItem3=/Game/StreetSceneLarge_AC
-MRUItem4=/Game/StreetScene_PJH
-MRUItem5=/Game/StreetSceneLarge_JJ
+MRUItem1=/Game/StreetSceneLarge_JJ
+MRUItem2=/Game/StreetSceneLarge_ST
+MRUItem3=/Game/StreetSceneLarge
+MRUItem4=/Game/StreetSceneLarge_AC
+MRUItem5=/Game/StreetScene_PJH
 MRUItem6=/Game/StreetSceneLarge_SD
 MRUItem7=/Game/StreetSceneLarge_CIR
 MRUItem8=/Game/StreetSceneLarge_JC
@@ -542,6 +542,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Lin_Pan_content/truck_final.truck_final;
 RecentlyPlaced=/Game/Alexander_Cervantes_Content/Wood_Car_Texture.Wood_Car_Texture;
 RecentlyPlaced=/Game/MyStuff/01.01;
 RecentlyPlaced=/Game/MyStuff/03.03;
@@ -561,7 +562,6 @@ RecentlyPlaced=/Game/woodBlocksContent/M_MedWood1_AP_Inst.M_MedWood1_AP_Inst;
 RecentlyPlaced=/Game/woodBlocksContent/M_MedWood2_AP_Inst.M_MedWood2_AP_Inst;
 RecentlyPlaced=/Game/woodBlocksContent/M_StreetBlockStipes_AP_Inst2.M_StreetBlockStipes_AP_Inst2;
 RecentlyPlaced=/Game/Tractor/SM_MERGED_tractorBase.SM_MERGED_tractorBase;
-RecentlyPlaced=/Game/woodBlocksContent/CrossWalk.CrossWalk;
 None=======
 
 [MessageLog]
@@ -597,11 +597,11 @@ GlobalAssetPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
 MRUItem0=/Game/StreetSceneLarge_Lin_Pan
-MRUItem1=/Game/StreetSceneLarge_ST
-MRUItem2=/Game/StreetSceneLarge
-MRUItem3=/Game/StreetSceneLarge_AC
-MRUItem4=/Game/StreetScene_PJH
-MRUItem5=/Game/StreetSceneLarge_JJ
+MRUItem1=/Game/StreetSceneLarge_JJ
+MRUItem2=/Game/StreetSceneLarge_ST
+MRUItem3=/Game/StreetSceneLarge
+MRUItem4=/Game/StreetSceneLarge_AC
+MRUItem5=/Game/StreetScene_PJH
 MRUItem6=/Game/StreetSceneLarge_SD
 MRUItem7=/Game/StreetSceneLarge_CIR
 MRUItem8=/Game/StreetSceneLarge_JC
