--- a/APsec1LargeCityBase 4.20/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/APsec1LargeCityBase 4.20/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -101,17 +101,19 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [MRU]
 MRUItem0=/Game/StreetSceneLarge
-MRUItem1=/Game/StreetSceneLarge_pjjh
+MRUItem1=/Game/StreetSceneLarge_KK
+MRUItem2=/Game/StreetSceneLarge_pjjh
 
 [EditorStartup]
 LastLevel=/Game/StreetSceneLarge
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [ContentBrowserRecent]
 MRUItem0=/Game/StreetSceneLarge
-MRUItem1=/Game/StreetSceneLarge_pjjh
+MRUItem1=/Game/StreetSceneLarge_KK
+MRUItem2=/Game/StreetSceneLarge_pjjh
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -127,6 +129,19 @@ StaticMeshActor.Actor=True
 Actor.TransformCommon=True
 Actor.Rendering=True
 Actor.Actor=True
+Brush.TransformCommon=True
+Brush.Surface Materials=True
+Brush.Geometry=True
+Brush.Surface Properties=True
+Brush.BrushSettings=True
+Brush.Actor=True
+Generic.Surface Materials=True
+Generic.Geometry=True
+Generic.Surface Properties=True
+LightmassPrimitiveSettingsObject.Lightmass=True
+Actor.Surface Materials=True
+Actor.Geometry=True
+Actor.Surface Properties=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=154.400
@@ -795,5 +810,8 @@ HierarchicalLODOutliner.TimeStamp=2018.10.29-18.24.57
 HierarchicalLODOutliner.LastCompileMethod=Unknown
 MeshBuilder.TimeStamp=2018.10.29-18.24.59
 MeshBuilder.LastCompileMethod=Unknown
+
+[DetailPropertyExpansion]
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 
