--- a/APsec1LargeCityBase/APsec1LargeCityBase.uproject
+++ b/APsec1LargeCityBase/APsec1LargeCityBase.uproject
@@ -1,6 +1,12 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{E99C049F-45CE-7C5B-7AB8-D99E7BA1EE3D}",
+	"EngineAssociation": "4.20",
 	"Category": "",
-	"Description": ""
+	"Description": "",
+	"Plugins": [
+		{
+			"Name": "HoudiniEngine",
+			"Enabled": true
+		}
+	]
 }
