--- a/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -487,6 +487,256 @@ FbxScene_Block3_C.Input=True
 FbxScene_Block3_C.Actor=True
 FbxScene_Block3_C.Tick=True
 FbxScene_Block3_C.Replication=True
+ThirdPersonGameMode_C.Tick=True
+ThirdPersonGameMode_C.Classes=True
+ThirdPersonGameMode_C.Game=True
+ThirdPersonGameMode_C.GameMode=True
+ThirdPersonCharacter_C.TransformCommon=True
+ThirdPersonCharacter_C.Animation=True
+ThirdPersonCharacter_C.Mesh=True
+ThirdPersonCharacter_C.Clothing=True
+ThirdPersonCharacter_C.Physics=True
+ThirdPersonCharacter_C.Collision=True
+ThirdPersonCharacter_C.ClothingSimulation=True
+ThirdPersonCharacter_C.Lighting=True
+ThirdPersonCharacter_C.Rendering=True
+ThirdPersonCharacter_C.Tags=True
+ThirdPersonCharacter_C.Activation=True
+ThirdPersonCharacter_C.Cooking=True
+ThirdPersonCharacter_C.Character Movement: Jumping / Falling=True
+ThirdPersonCharacter_C.Character Movement (General Settings)=True
+ThirdPersonCharacter_C.Character Movement: Walking=True
+ThirdPersonCharacter_C.Character Movement: Swimming=True
+ThirdPersonCharacter_C.Character Movement: Flying=True
+ThirdPersonCharacter_C.Character Movement: Custom Movement=True
+ThirdPersonCharacter_C.Character Movement (Rotation Settings)=True
+ThirdPersonCharacter_C.Character Movement: Physics Interaction=True
+ThirdPersonCharacter_C.Character Movement (Networking)=True
+ThirdPersonCharacter_C.Character Movement=True
+ThirdPersonCharacter_C.Character Movement: Avoidance=True
+ThirdPersonCharacter_C.Character Movement: NavMesh Movement=True
+ThirdPersonCharacter_C.RootMotion=True
+ThirdPersonCharacter_C.NavMovement=True
+ThirdPersonCharacter_C.Velocity=True
+ThirdPersonCharacter_C.PlanarMovement=True
+ThirdPersonCharacter_C.MovementComponent=True
+ThirdPersonCharacter_C.Shape=True
+ThirdPersonCharacter_C.Navigation=True
+ThirdPersonCharacter_C.Character=True
+ThirdPersonCharacter_C.Camera=True
+ThirdPersonCharacter_C.Pawn=True
+ThirdPersonCharacter_C.Input=True
+ThirdPersonCharacter_C.Actor=True
+ThirdPersonCharacter_C.Materials=True
+PlayerStart.LOD=False
+PlayerStart.Cooking=False
+StreetSceneLarge_C.Tick=True
+StreetSceneLarge_C.Replication=True
+StreetSceneLarge_C.Input=True
+StreetSceneLarge_C.Actor=True
+StreetSceneLarge_C.LOD=True
+StreetSceneLarge_C.Cooking=True
+CryptoKeysSettings.Encryption=True
+CryptoKeysSettings.Signing=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GeneralProjectSettings.Settings=True
+GameplayTagsSettings.GameplayTags=True
+GameplayTagsSettings.Advanced Replication=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.GameInstance=True
+MoviePlayerSettings.Movies=True
+ProjectPackagingSettings.Project=True
+ProjectPackagingSettings.Packaging=True
+ProjectPackagingSettings.Blueprints=True
+ProjectPackagingSettings.Prerequisites=True
+HardwareTargetingSettings.Target Hardware=True
+HardwareTargetingSettings.Pending Changes=True
+AssetManagerSettings.Asset Manager=True
+AssetManagerSettings.Redirects=True
+AISystem.AISystem=True
+AISystem.Movement=True
+AISystem.Gameplay Tasks=True
+AISystem.EQS=True
+AISystem.PerceptionSystem=True
+AnimationSettings.Compression=True
+AnimationSettings.Performance=True
+AudioSettings.Dialogue=True
+AudioSettings.Audio=True
+AudioSettings.Quality=True
+CollisionProfile.Object Channels=True
+CollisionProfile.Trace Channels=True
+ConsoleSettings.General=True
+ConsoleSettings.AutoComplete=True
+ConsoleSettings.Colors=True
+CookerSettings.Cooker=True
+CookerSettings.Textures=True
+CrowdManager.Config=True
+GameplayDebuggerConfig.Input=True
+GameplayDebuggerConfig.Display=True
+GameplayDebuggerConfig.AddOns=True
+GarbageCollectionSettings.General=True
+GarbageCollectionSettings.Optimization=True
+Engine.Fonts=True
+Engine.DefaultClasses=True
+Engine.DefaultMaterials=True
+Engine.Settings=True
+Engine.Subtitles=True
+Engine.Blueprints=True
+Engine.Anim Blueprints=True
+Engine.Framerate=True
+Engine.Timecode=True
+Engine.Screenshots=True
+HierarchicalLODSettings.HLODSystem=True
+InputSettings.Bindings=True
+InputSettings.ViewportProperties=True
+InputSettings.Mobile=True
+InputSettings.Virtual Keyboard (Mobile)=True
+InputSettings.Console=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Tick=True
+NavigationSystemV1.Navigation=True
+NavigationSystemV1.NavigationSystem=True
+NavigationSystemV1.Navigation Enforcing=True
+NavigationSystemV1.Agents=True
+NetworkSettings.libcurl=True
+NetworkSettings.World=True
+NetworkSettings.replication=True
+PhysicsSettings.Constants=True
+PhysicsSettings.Simulation=True
+PhysicsSettings.Replication=True
+PhysicsSettings.Optimization=True
+PhysicsSettings.Framerate=True
+PhysicsSettings.Broadphase=True
+PhysicsSettings.Physical Surface=True
+RendererSettings.Mobile=True
+RendererSettings.Materials=True
+RendererSettings.Culling=True
+RendererSettings.Textures=True
+RendererSettings.Reflections=True
+RendererSettings.ForwardRenderer=True
+RendererSettings.Lighting=True
+RendererSettings.Tessellation=True
+RendererSettings.Translucency=True
+RendererSettings.Postprocessing=True
+RendererSettings.DefaultSettings=True
+RendererSettings.Optimizations=True
+RendererSettings.Debugging=True
+RendererSettings.VR=True
+RendererSettings.Experimental=True
+RendererSettings.Editor=True
+RendererSettings.ShaderPermutationReduction=True
+RendererSettings.MobileShaderPermutationReduction=True
+RendererOverrideSettings.ShaderPermutationReduction=True
+RendererOverrideSettings.Miscellaneous=True
+SlateSettings.ConstraintCanvas=True
+StreamingSettings.PackageStreaming=True
+StreamingSettings.LevelStreaming=True
+TutorialSettings.Tutorials=True
+UserInterfaceSettings.Focus=True
+UserInterfaceSettings.Hardware Cursors=True
+UserInterfaceSettings.Software Cursors=True
+UserInterfaceSettings.DPI Scaling=True
+UserInterfaceSettings.Widgets=True
+LevelEditor2DSettings.General=True
+LevelEditor2DSettings.LayerSnapping=True
+EditorProjectAppearanceSettings.Units=True
+BlueprintEditorProjectSettings.Blueprints=True
+BlueprintEditorProjectSettings.Actors=True
+ClassViewerProjectSettings.ClassVisibilityManagement=True
+ProxyLODMeshSimplificationSettings.General=True
+MovieSceneToolsProjectSettings.Timeline=True
+MovieSceneToolsProjectSettings.Shots=True
+MovieSceneToolsProjectSettings.TrackSettings=True
+MeshSimplificationSettings.General=True
+PaperImporterSettings.NewAssetSettings=True
+PaperImporterSettings.ImportSettings=True
+PaperImporterSettings.MaterialSettings=True
+UMGEditorProjectSettings.Compiler=True
+UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Class Filtering=True
+AndroidRuntimeSettings.APK Packaging=True
+AndroidRuntimeSettings.Build=True
+AndroidRuntimeSettings.Advanced APK Packaging=True
+AndroidRuntimeSettings.DistributionSigning=True
+AndroidRuntimeSettings.GooglePlayServices=True
+AndroidRuntimeSettings.Icons=True
+AndroidRuntimeSettings.LaunchImages=True
+AndroidRuntimeSettings.Input=True
+AndroidRuntimeSettings.DaydreamAppTile=True
+AndroidRuntimeSettings.GraphicsDebugger=True
+AndroidRuntimeSettings.Audio=True
+AndroidRuntimeSettings.MultiTextureFormats=True
+AndroidRuntimeSettings.TextureFormatPriorities=True
+ShaderPlatformQualitySettings.Forward Rendering Overrides=True
+AndroidSDKSettings.SDKConfig=True
+HTML5TargetSettings.Emscripten=True
+HTML5TargetSettings.Audio=True
+HTML5TargetSettings.Canvas=True
+HTML5TargetSettings.Packaging=True
+HTML5TargetSettings.Launch=True
+HTML5TargetSettings.Amazon_S3=True
+IOSRuntimeSettings.Mobile Provision=True
+IOSRuntimeSettings.BundleInformation=True
+IOSRuntimeSettings.Orientation=True
+IOSRuntimeSettings.Input=True
+IOSRuntimeSettings.Rendering=True
+IOSRuntimeSettings.OS Info=True
+IOSRuntimeSettings.PowerUsage=True
+IOSRuntimeSettings.Devices=True
+IOSRuntimeSettings.Build=True
+IOSRuntimeSettings.Online=True
+IOSRuntimeSettings.Extra PList Data=True
+IOSRuntimeSettings.Required Icons=True
+IOSRuntimeSettings.Optional Icons=True
+IOSRuntimeSettings.Launch Images=True
+IOSRuntimeSettings.Audio=True
+LinuxTargetSettings.Targeted RHIs=True
+LinuxTargetSettings.Splash=True
+LinuxTargetSettings.Icon=True
+LinuxTargetSettings.Audio=True
+MacTargetSettings.Targeted RHIs=True
+MacTargetSettings.Rendering=True
+MacTargetSettings.Splash=True
+MacTargetSettings.Icon=True
+MacTargetSettings.Audio=True
+LuminRuntimeSettings.Audio=True
+LuminRuntimeSettings.MPK Packaging=True
+LuminRuntimeSettings.Build=True
+LuminRuntimeSettings.Runtime=True
+LuminRuntimeSettings.Distribution Signing=True
+LuminRuntimeSettings.Magic Leap App Tile=True
+LuminRuntimeSettings.Advanced MPK Packaging=True
+MagicLeapSDKSettings.SDK Config=True
+WindowsTargetSettings.Targeted RHIs=True
+WindowsTargetSettings.Toolchain=True
+WindowsTargetSettings.OS Info=True
+WindowsTargetSettings.Splash=True
+WindowsTargetSettings.Icon=True
+WindowsTargetSettings.Audio=True
+AvfMediaSettings.Debug=True
+ImgMediaSettings.General=True
+ImgMediaSettings.Caching=True
+ImgMediaSettings.EXR=True
+ImgMediaSettings.Proxies=True
+LevelSequenceEditorSettings.Tracks=True
+MagicLeapEmulatorSettings.MagicLeapEmulator=True
+MagicLeapSettings.General=True
+OculusHMDRuntimeSettings.SplashScreen=True
+PaperRuntimeSettings.Experimental=True
+PaperRuntimeSettings.Settings=True
+TcpMessagingSettings.Transport=True
+UdpMessagingSettings.Transport=True
+UdpMessagingSettings.Tunnel=True
+WmfMediaSettings.Media=True
+WmfMediaSettings.Debug=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -564,6 +814,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
 RecentlyPlaced=/Game/Shakti_Das_Content/Shak_WoodBlock_2_REDONE.Shak_WoodBlock_2_REDONE;
 RecentlyPlaced=/Game/Shakti_Das_Content/Shak_WoodBlock_3.Shak_WoodBlock_3;
 RecentlyPlaced=/Game/Shakti_Das_Content/Shak_WoodBlock_1.Shak_WoodBlock_1;
@@ -583,7 +834,6 @@ RecentlyPlaced=/Game/MyStuff/03.03;
 RecentlyPlaced=/Game/MyStuff/02.02;
 RecentlyPlaced=/Game/MyStuff/001.001;
 RecentlyPlaced=/Game/MyStuff/002.002;
-RecentlyPlaced=/Game/MyStuff/003.003;
 None=======
 
 [MessageLog]
@@ -623,26 +873,26 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StreetSceneLarge
-MRUItem1=/Game/StreetSceneLarge_SD
-MRUItem2=/Game/Sujay_Tripathy_Content/FbxScene_Block3
-MRUItem3=/Game/Sujay_Tripathy_Content/FbxScene_Block2
-MRUItem4=/Game/Sujay_Tripathy_Content/FbxScene_Block1
-MRUItem5=/Game/StreetScene_PJH
-MRUItem6=/Game/StreetSceneLarge_Lin_Pan
-MRUItem7=/Game/StreetSceneLarge_JJ
-MRUItem8=/Game/StreetSceneLarge_JC
-MRUItem9=/Game/StreetSceneLarge_CIR
-MRUItem10=/Game/StreetSceneLarge_ST
-MRUItem11=/Game/StreetSceneLarge_YCF
-MRUItem12=/Game/Chuanqi_Liu_Content/Wood_Chuanqi
-MRUItem13=/Game/StreetSceneLarge_AC
-MRUItem14=/Game/Jason_Jackson_Content/Parts/M_MasterWoodBlock_AP_1_Inst
-MRUItem15=/Game/Jason_Jackson_Content/Parts/M_MasterWoodBlock_AP_1
-MRUItem16=/Game/Jason_Jackson_Content/Parts/M_MasterWoodBlock_AP_2
-MRUItem17=/Game/Jason_Jackson_Content/Parts/M_WoodBlock_AP_Inst
-MRUItem18=/Game/Jason_Jackson_Content/Parts/M_MasterWoodBlock_AP
-MRUItem19=/Game/Maps/Andrew_Baldridge_Street_Level
+MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem1=/Game/StreetSceneLarge
+MRUItem2=/Game/StreetSceneLarge_SD
+MRUItem3=/Game/Sujay_Tripathy_Content/FbxScene_Block3
+MRUItem4=/Game/Sujay_Tripathy_Content/FbxScene_Block2
+MRUItem5=/Game/Sujay_Tripathy_Content/FbxScene_Block1
+MRUItem6=/Game/StreetScene_PJH
+MRUItem7=/Game/StreetSceneLarge_Lin_Pan
+MRUItem8=/Game/StreetSceneLarge_JJ
+MRUItem9=/Game/StreetSceneLarge_JC
+MRUItem10=/Game/StreetSceneLarge_CIR
+MRUItem11=/Game/StreetSceneLarge_ST
+MRUItem12=/Game/StreetSceneLarge_YCF
+MRUItem13=/Game/Chuanqi_Liu_Content/Wood_Chuanqi
+MRUItem14=/Game/StreetSceneLarge_AC
+MRUItem15=/Game/Jason_Jackson_Content/Parts/M_MasterWoodBlock_AP_1_Inst
+MRUItem16=/Game/Jason_Jackson_Content/Parts/M_MasterWoodBlock_AP_1
+MRUItem17=/Game/Jason_Jackson_Content/Parts/M_MasterWoodBlock_AP_2
+MRUItem18=/Game/Jason_Jackson_Content/Parts/M_WoodBlock_AP_Inst
+MRUItem19=/Game/Jason_Jackson_Content/Parts/M_MasterWoodBlock_AP
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -726,6 +976,8 @@ None=======
 /Game/Jason_Jackson_Content/Parts/M_MasterWoodBlock_AP_1_Inst.M_MasterWoodBlock_AP_1_Inst=1
 /Game/Shakti_Das_Content/M_WoodBlock_Instance_4.M_WoodBlock_Instance_4=1
 /Game/Shakti_Das_Content/M_MasterWoodBlock_PGA.M_MasterWoodBlock_PGA=1
+/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode=1
+/Game/StreetSceneLarge.StreetSceneLarge:PersistentLevel.StreetSceneLarge=1
 
 [RootWindow]
 ScreenPosition=X=122.400 Y=46.400
