--- a/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,10 +132,10 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 
 [EditorStartup]
-LastLevel=/Game/StreetSceneLarge
+LastLevel=/Engine/Maps/Templates/Template_Default
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -1652,28 +1652,6 @@ HoudiniEngineEditor.TimeStamp=2018.08.22-05.40.34
 HoudiniEngineEditor.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2018.08.21-15.35.30
 BlueprintGraph.LastCompileMethod=Unknown
-ExternalImagePicker.TimeStamp=2018.09.26-19.26.57
-ExternalImagePicker.LastCompileMethod=Unknown
-
-[/Script/UnrealEd.EditorLoadingSavingSettings]
-AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
-bForceCompilationAtStartup=False
-bRestoreOpenAssetTabsOnRestart=False
-bEnableSourceControlCompatabilityCheck=False
-bMonitorContentDirectories=True
-AutoReimportThreshold=3.000000
-bAutoCreateAssets=True
-bAutoDeleteAssets=True
-bDetectChangesOnStartup=True
-bPromptBeforeAutoImporting=True
-bDeleteSourceFilesWithAssets=False
-bAutomaticallyCheckoutOnAssetModification=False
-bSCCUseGlobalSettings=False
-None=======
-StaticMeshEditor.TimeStamp=2018.09.30-00.18.30
-StaticMeshEditor.LastCompileMethod=Unknown
-TextureEditor.TimeStamp=2018.09.30-00.18.30
-TextureEditor.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2018.09.26-19.26.57
 ExternalImagePicker.LastCompileMethod=Unknown
 
