--- a/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,7 +132,7 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/Template_Default
+LastLevel=/Game/StreetSceneLarge
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -815,6 +815,9 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Andrew_Radford_Content/AR_blocks_3.AR_blocks_3;
+RecentlyPlaced=/Game/Andrew_Radford_Content/AR_blocks_2.AR_blocks_2;
+RecentlyPlaced=/Game/Andrew_Radford_Content/AR_blocks_1.AR_blocks_1;
 RecentlyPlaced=/Game/Jason_Jackson_Content/BeveledCube.BeveledCube;
 RecentlyPlaced=/Game/Jason_Jackson_Content/HollowCubeWithBase.HollowCubeWithBase;
 RecentlyPlaced=/Game/Jason_Jackson_Content/Pylon.Pylon;
@@ -832,9 +835,6 @@ RecentlyPlaced=/Game/Shakti_Das_Content/Shak_WoodBlock_3.Shak_WoodBlock_3;
 RecentlyPlaced=/Game/Shakti_Das_Content/Shak_WoodBlock_1.Shak_WoodBlock_1;
 RecentlyPlaced=/Game/woodBlocksContent/M_LightWood_AP_Inst.M_LightWood_AP_Inst;
 RecentlyPlaced=/Game/woodBlocksContent/M_MedWood1_AP_Inst.M_MedWood1_AP_Inst;
-RecentlyPlaced=/Game/woodBlocksContent/M_MasterWoodBlock_AP.M_MasterWoodBlock_AP;
-RecentlyPlaced=/Game/Sujay_Tripathy_Content/pCube1_2.pCube1;
-RecentlyPlaced=/Game/Sujay_Tripathy_Content/pCube1_1.pCube1;
 None=======
 
 [MessageLog]
