--- a/APsec1LargeCityBase 4.21/APsec1LargeCityBase.uproject
+++ b/APsec1LargeCityBase 4.21/APsec1LargeCityBase.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{E99C049F-45CE-7C5B-7AB8-D99E7BA1EE3D}",
+	"EngineAssociation": "4.21",
 	"Category": "",
 	"Description": ""
 }
