--- a/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,18 +103,18 @@ CurrentPosGridSize=4
 CurrentScalingGridSize=4
 
 [MRU]
-MRUItem0=/Game/StreetSceneLarge_Lin_Pan
-MRUItem1=/Game/StreetScene_PJH
-MRUItem2=/Game/StreetSceneLarge
-MRUItem3=/Game/StreetSceneLarge_CIR
-MRUItem4=/Game/StreetSceneLarge_JC
-MRUItem5=/Game/StreetSceneLarge_JJ
-MRUItem6=/Game/StreetSceneLarge_SD
-MRUItem7=/Game/StreetSceneLarge_ST
-MRUItem8=/Game/StreetSceneLarge_YCF
-MRUItem9=/Game/StreetSceneLarge_AC
-MRUItem10=/Game/DMS/StreetSceneLarge_DMS
-MRUItem11=/Game/Maps/Andrew_Baldridge_Street_Level
+MRUItem0=/Game/StreetSceneLarge
+MRUItem1=/Game/StreetSceneLarge1_JFS
+MRUItem2=/Game/JFS/StreetSceneLarge1_JFS
+MRUItem3=/Game/StreetSceneLarge_Lin_Pan
+MRUItem4=/Game/StreetScene_PJH
+MRUItem5=/Game/StreetSceneLarge_CIR
+MRUItem6=/Game/StreetSceneLarge_JC
+MRUItem7=/Game/StreetSceneLarge_JJ
+MRUItem8=/Game/StreetSceneLarge_SD
+MRUItem9=/Game/StreetSceneLarge_ST
+MRUItem10=/Game/StreetSceneLarge_YCF
+MRUItem11=/Game/StreetSceneLarge_AC
 
 [LightingBuildOptions]
 QualityLevel=3
@@ -133,10 +133,10 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 
 [EditorStartup]
-LastLevel=/Game/StreetSceneLarge_Lin_Pan
+LastLevel=/Game/StreetSceneLarge
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -875,26 +875,26 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StreetSceneLarge_Lin_Pan
-MRUItem1=/Game/StreetScene_PJH
-MRUItem2=/Game/Sujay_Tripathy_Content/manmat
-MRUItem3=/Game/StreetSceneLarge
-MRUItem4=/Game/HaydenMatthewsContent/PM3D_Mannequin2
-MRUItem5=/Game/HaydenMatthewsContent/PM3D_Mannequin2_Texture_Mat
-MRUItem6=/Game/StreetSceneLarge_CIR
-MRUItem7=/Game/StreetSceneLarge_JC
-MRUItem8=/Game/StreetSceneLarge_JJ
-MRUItem9=/Game/StreetSceneLarge_SD
-MRUItem10=/Game/StreetSceneLarge_ST
-MRUItem11=/Game/StreetSceneLarge_YCF
-MRUItem12=/Game/StreetSceneLarge_AC
-MRUItem13=/Game/Shakti_Das_Content/M_WoodBlock_Instance_5
-MRUItem14=/Game/Shakti_Das_Content/Mannequin/WoodenPerson4ZBrush2
-MRUItem15=/Game/DMS/StreetSceneLarge_DMS
-MRUItem16=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem17=/Game/Sujay_Tripathy_Content/FbxScene_Block3
-MRUItem18=/Game/Sujay_Tripathy_Content/FbxScene_Block2
-MRUItem19=/Game/Sujay_Tripathy_Content/FbxScene_Block1
+MRUItem0=/Game/StreetSceneLarge
+MRUItem1=/Game/StreetSceneLarge1_JFS
+MRUItem2=/Game/JFS/StreetSceneLarge1_JFS
+MRUItem3=/Game/StreetSceneLarge_Lin_Pan
+MRUItem4=/Game/StreetScene_PJH
+MRUItem5=/Game/Sujay_Tripathy_Content/manmat
+MRUItem6=/Game/HaydenMatthewsContent/PM3D_Mannequin2
+MRUItem7=/Game/HaydenMatthewsContent/PM3D_Mannequin2_Texture_Mat
+MRUItem8=/Game/StreetSceneLarge_CIR
+MRUItem9=/Game/StreetSceneLarge_JC
+MRUItem10=/Game/StreetSceneLarge_JJ
+MRUItem11=/Game/StreetSceneLarge_SD
+MRUItem12=/Game/StreetSceneLarge_ST
+MRUItem13=/Game/StreetSceneLarge_YCF
+MRUItem14=/Game/StreetSceneLarge_AC
+MRUItem15=/Game/Shakti_Das_Content/M_WoodBlock_Instance_5
+MRUItem16=/Game/Shakti_Das_Content/Mannequin/WoodenPerson4ZBrush2
+MRUItem17=/Game/DMS/StreetSceneLarge_DMS
+MRUItem18=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem19=/Game/Sujay_Tripathy_Content/FbxScene_Block3
 
 [MaterialInstanceEditor]
 bShowGrid=False
