--- a/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/APsec1LargeCityBase/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,18 +103,18 @@ CurrentPosGridSize=4
 CurrentScalingGridSize=4
 
 [MRU]
-MRUItem0=/Game/StreetSceneLarge
-MRUItem1=/Game/StreetSceneLarge1_JFS
-MRUItem2=/Game/JFS/StreetSceneLarge1_JFS
-MRUItem3=/Game/StreetSceneLarge_Lin_Pan
-MRUItem4=/Game/StreetScene_PJH
-MRUItem5=/Game/StreetSceneLarge_CIR
-MRUItem6=/Game/StreetSceneLarge_JC
-MRUItem7=/Game/StreetSceneLarge_JJ
-MRUItem8=/Game/StreetSceneLarge_SD
-MRUItem9=/Game/StreetSceneLarge_ST
-MRUItem10=/Game/StreetSceneLarge_YCF
-MRUItem11=/Game/StreetSceneLarge_AC
+MRUItem0=/Game/StreetSceneLarge_AR
+MRUItem1=/Game/StreetSceneLarge
+MRUItem2=/Game/StreetSceneLarge1_JFS
+MRUItem3=/Game/JFS/StreetSceneLarge1_JFS
+MRUItem4=/Game/StreetSceneLarge_Lin_Pan
+MRUItem5=/Game/StreetScene_PJH
+MRUItem6=/Game/StreetSceneLarge_CIR
+MRUItem7=/Game/StreetSceneLarge_JC
+MRUItem8=/Game/StreetSceneLarge_JJ
+MRUItem9=/Game/StreetSceneLarge_SD
+MRUItem10=/Game/StreetSceneLarge_ST
+MRUItem11=/Game/StreetSceneLarge_YCF
 
 [LightingBuildOptions]
 QualityLevel=3
@@ -133,7 +133,7 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 
 [EditorStartup]
-LastLevel=/Game/StreetSceneLarge
+LastLevel=/Game/StreetSceneLarge_AR
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -816,6 +816,9 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Andrew_Radford_Content/AR_blocks_3.AR_blocks_3;
+RecentlyPlaced=/Game/Andrew_Radford_Content/AR_blocks_1.AR_blocks_1;
+RecentlyPlaced=/Game/Andrew_Radford_Content/Train/train.train;
 RecentlyPlaced=/Game/Chuanqi_Liu_Content/uv-man_Mat.uv-man_Mat;
 RecentlyPlaced=/Game/Chuanqi_Liu_Content/mannequinn.mannequinn;
 RecentlyPlaced=/Game/Chuanqi_Liu_Content/uv-man.uv-man;
@@ -833,9 +836,6 @@ RecentlyPlaced=/Game/HaydenMatthewsContent/Wood_Car.Wood_Car;
 RecentlyPlaced=/Game/HaydenMatthewsContent/TextureAttempt189999.TextureAttempt189999;
 RecentlyPlaced=/Game/HaydenMatthewsContent/MannequinWithTexture.MannequinWithTexture;
 RecentlyPlaced=/Game/HaydenMatthewsContent/_BrushTxtr_Mat._BrushTxtr_Mat;
-RecentlyPlaced=/Game/HaydenMatthewsContent/Mannequin2.Mannequin2;
-RecentlyPlaced=/Game/HaydenMatthewsContent/_BrushTxtr._BrushTxtr;
-RecentlyPlaced=/Game/HaydenMatthewsContent/PM3D_Mannequin2.PM3D_Mannequin2;
 None=======
 
 [MessageLog]
@@ -875,26 +875,26 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StreetSceneLarge
-MRUItem1=/Game/StreetSceneLarge1_JFS
-MRUItem2=/Game/JFS/StreetSceneLarge1_JFS
-MRUItem3=/Game/StreetSceneLarge_Lin_Pan
-MRUItem4=/Game/StreetScene_PJH
-MRUItem5=/Game/Sujay_Tripathy_Content/manmat
-MRUItem6=/Game/HaydenMatthewsContent/PM3D_Mannequin2
-MRUItem7=/Game/HaydenMatthewsContent/PM3D_Mannequin2_Texture_Mat
-MRUItem8=/Game/StreetSceneLarge_CIR
-MRUItem9=/Game/StreetSceneLarge_JC
-MRUItem10=/Game/StreetSceneLarge_JJ
-MRUItem11=/Game/StreetSceneLarge_SD
-MRUItem12=/Game/StreetSceneLarge_ST
-MRUItem13=/Game/StreetSceneLarge_YCF
-MRUItem14=/Game/StreetSceneLarge_AC
-MRUItem15=/Game/Shakti_Das_Content/M_WoodBlock_Instance_5
-MRUItem16=/Game/Shakti_Das_Content/Mannequin/WoodenPerson4ZBrush2
-MRUItem17=/Game/DMS/StreetSceneLarge_DMS
-MRUItem18=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem19=/Game/Sujay_Tripathy_Content/FbxScene_Block3
+MRUItem0=/Game/StreetSceneLarge_AR
+MRUItem1=/Game/StreetSceneLarge
+MRUItem2=/Game/StreetSceneLarge1_JFS
+MRUItem3=/Game/JFS/StreetSceneLarge1_JFS
+MRUItem4=/Game/StreetSceneLarge_Lin_Pan
+MRUItem5=/Game/StreetScene_PJH
+MRUItem6=/Game/Sujay_Tripathy_Content/manmat
+MRUItem7=/Game/HaydenMatthewsContent/PM3D_Mannequin2
+MRUItem8=/Game/HaydenMatthewsContent/PM3D_Mannequin2_Texture_Mat
+MRUItem9=/Game/StreetSceneLarge_CIR
+MRUItem10=/Game/StreetSceneLarge_JC
+MRUItem11=/Game/StreetSceneLarge_JJ
+MRUItem12=/Game/StreetSceneLarge_SD
+MRUItem13=/Game/StreetSceneLarge_ST
+MRUItem14=/Game/StreetSceneLarge_YCF
+MRUItem15=/Game/StreetSceneLarge_AC
+MRUItem16=/Game/Shakti_Das_Content/M_WoodBlock_Instance_5
+MRUItem17=/Game/Shakti_Das_Content/Mannequin/WoodenPerson4ZBrush2
+MRUItem18=/Game/DMS/StreetSceneLarge_DMS
+MRUItem19=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
 
 [MaterialInstanceEditor]
 bShowGrid=False
